# Sample-FHIR-Server

./: .env  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
scripts/: start_db.sh
src/: configuration.rs  lib.rs  main.rs  state.rs
src/routes/: mod.rs
src/routes/individuals/: mod.rs  patient.rs
tests/: patient.rs
